--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,22 @@
             <artifactId>radiance-theming</artifactId>
             <version>7.5.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.formdev</groupId>
+            <artifactId>flatlaf</artifactId>
+            <version>3.4.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.simplejavamail</groupId>
+            <artifactId>simple-java-mail</artifactId>
+            <version>7.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.simplejavamail</groupId>
+            <artifactId>core-module</artifactId>
+            <version>7.5.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
